--- a/pom.xml
+++ b/pom.xml
@@ -48,15 +48,27 @@
 		</dependency>
 
 		<!-- Healthcheck /actuator/health -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-actuator</artifactId>
+                </dependency>
 
-		<!-- Telegram Bots API (без spring-boot-starter, нам достаточно core) -->
-		<dependency>
-			<groupId>org.telegram</groupId>
-			<artifactId>telegrambots</artifactId>
+                <!-- JAXB для поддержки javax.xml.bind.* в среде Java 21 -->
+                <dependency>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                        <version>2.3.1</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                        <version>2.3.1</version>
+                </dependency>
+
+                <!-- Telegram Bots API (без spring-boot-starter, нам достаточно core) -->
+                <dependency>
+                        <groupId>org.telegram</groupId>
+                        <artifactId>telegrambots</artifactId>
 			<version>6.9.7.1</version>
 		</dependency>
 
