Fix monitoring keywords configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,6 @@ telegram.bot.token=${TELEGRAM_BOT_TOKEN:CHANGE_ME}
 telegram.webhook.path=${TELEGRAM_WEBHOOK_PATH:/telegram/webhook}
 telegram.webhook.public-url=${TELEGRAM_WEBHOOK_PUBLIC_URL:}
 
-monitoring.keywords[0]=${MONITORING_KEYWORDS_0:??????}
-monitoring.keywords[1]=${MONITORING_KEYWORDS_1:????}
-monitoring.keywords[2]=${MONITORING_KEYWORDS_2:??????}
+monitoring.keywords=${MONITORING_KEYWORDS:??????,????,??????}
 
 management.endpoints.web.exposure.include=health
